--- a/package.json
+++ b/package.json
@@ -9,15 +9,30 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+      
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "zcmd.helloWorld",
-        "title": "Hello World"
+        "command": "zcmd.create-taro-page",
+        "title": "创建 Taro 页面"
       }
-    ]
+    ],
+    "menus": {
+      "explorer/context": [
+        {
+          "command": "zcmd.create-taro-page",
+          "group": "navigation"
+        }
+      ]
+    }
+  },
+  "publisher": "zhuddan",
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/zhuddan/zcmd.git"
   },
   "scripts": {
     "vscode:prepublish": "pnpm run package",
