--- a/package.json
+++ b/package.json
@@ -71,5 +71,8 @@
     "typescript": "^5.7.2",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "copy-webpack-plugin": "^12.0.2"
   }
 }
