--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
       {
         "command": "zcmd.type-def",
         "title": "Create a typedef in JSDOC"
+      },
+      {
+        "command": "zcmd.create-api",
+        "title": "Create a api"
       }
     ],
     "menus": {
@@ -55,6 +59,9 @@
     "test": "vscode-test",
     "tag": "bumpp"
   },
+  "dependencies": {
+    "copy-webpack-plugin": "^12.0.2"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^3.14.0",
     "@types/ejs": "^3.1.5",
@@ -71,8 +78,5 @@
     "typescript": "^5.7.2",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
-    "copy-webpack-plugin": "^12.0.2"
   }
 }
