--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
-    "lint": "eslint src",
+    "lint": "eslint src --fix",
     "test": "vscode-test",
     "tag": "bumpp"
   },
