--- a/package.json
+++ b/package.json
@@ -29,12 +29,20 @@
       {
         "command": "zcmd.create-api",
         "title": "Create a api"
+      },
+      {
+        "command": "zcmd.create-nest-js-module",
+        "title": "Create a NestJS module"
       }
     ],
     "menus": {
       "explorer/context": [
         {
           "command": "zcmd.create-taro-page",
+          "group": "2_navigate"
+        },
+        {
+          "command": "zcmd.create-nest-js-module",
           "group": "2_navigate"
         }
       ],
@@ -60,11 +68,13 @@
     "tag": "bumpp"
   },
   "dependencies": {
-    "copy-webpack-plugin": "^12.0.2"
+    "copy-webpack-plugin": "^12.0.2",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.14.0",
     "@types/ejs": "^3.1.5",
+    "@types/lodash": "^4.17.20",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
     "@types/vscode": "^1.96.0",
